# gopro-cam-tray

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/: tray-icon.argb
src/: gopro.rs  linux.rs  main.rs  mf_decode.rs  mpegts.rs  obs_vcam.rs  startup.rs  tray.rs
