[package]
name = "gopro-cam-tray"
version = "0.1.3"
edition = "2021"
description = "Tiny native tray app that turns a GoPro into a webcam via the OBS Virtual Camera"
license = "MIT"
readme = "README.md"

[dependencies]
# Cross-platform GoPro control (HTTP, no TLS) + USB interface discovery.
ureq = { version = "2", default-features = false }
if-addrs = "0.13"

# Windows-only: system tray, OBS shared-memory sink, Media Foundation decoder.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Media_MediaFoundation",
    "Win32_Networking_WinSock",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# Linux-only: Ctrl+C handling for the CLI daemon.
[target.'cfg(target_os = "linux")'.dependencies]
ctrlc = "3"

[build-dependencies]
# Embeds the app icon into the .exe (Explorer/taskbar icon + resource for the tray).
# Only invoked when the target is Windows (see build.rs); harmless elsewhere.
winresource = "0.1"

# Smallest possible release binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
