[package]
name = "gopro-cam-tray"
version = "0.2.0"
edition = "2021"
description = "Tiny native tray app that turns a GoPro into a webcam (Windows: OBS Virtual Camera, Linux: v4l2loopback)"
license = "MIT"
readme = "README.md"

[dependencies]
# USB interface discovery (the GoPro HTTP control client is hand-rolled over
# TcpStream in gopro.rs — no HTTP-library dependency).
if-addrs = "0.13"

# Windows-only: system tray, OBS shared-memory sink, Media Foundation decoder.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Media_MediaFoundation",
    "Win32_Networking_WinSock",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# Linux-only: system-tray (StatusNotifierItem via ksni/zbus, pure Rust so the
# static musl build stays dependency-free) and libc for signal handling, the
# ffmpeg-dies-with-us and single-instance guards.
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"
tokio = { version = "1", features = ["rt", "time"] }
libc = "0.2"

[build-dependencies]
# Embeds the app icon into the .exe (Explorer/taskbar icon + resource for the tray).
# Only invoked when the target is Windows (see build.rs); harmless elsewhere.
winresource = "0.1"

# Smallest possible release binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
